unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/BONOS_Y_COMISIONES__c.object-meta.xml
<CustomObject>
    <label>Bonos y Comisiones</label>
    <nameField>
        <label>Folio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonos y Comisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>