unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/asesor_id__c.field-meta.xml
<CustomField>
    <fullName>asesor_id__c</fullName>
    <label>asesor id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>