unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/avance_dtu__c.field-meta.xml
<CustomField>
    <fullName>avance_dtu__c</fullName>
    <label>avance dtu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>