unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/bonif_mes_importe__c.field-meta.xml
<CustomField>
    <fullName>bonif_mes_importe__c</fullName>
    <label>bonif mes importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>