unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/bonif_mes_porcentaje__c.field-meta.xml
<CustomField>
    <fullName>bonif_mes_porcentaje__c</fullName>
    <label>bonif mes porcentaje</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>