unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/bonificacion_empleado__c.field-meta.xml
<CustomField>
    <fullName>bonificacion_empleado__c</fullName>
    <label>bonificacion empleado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>