unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/bonificacion_pv_r__c.field-meta.xml
<CustomField>
    <fullName>bonificacion_pv_r__c</fullName>
    <label>bonificacion pv r</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>