unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/canal_id__c.field-meta.xml
<CustomField>
    <fullName>canal_id__c</fullName>
    <label>canal id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>