unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/cancelacion_resolicitud__c.field-meta.xml
<CustomField>
    <fullName>cancelacion_resolicitud__c</fullName>
    <label>cancelacion resolicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>