unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/check_aviso_retencion__c.field-meta.xml
<CustomField>
    <fullName>check_aviso_retencion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check aviso retencion</label>
    <type>Checkbox</type>
</CustomField>