unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/check_biometrica_notaria__c.field-meta.xml
<CustomField>
    <fullName>check_biometrica_notaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check biometrica notaria</label>
    <type>Checkbox</type>
</CustomField>