unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/check_exigible__c.field-meta.xml
<CustomField>
    <fullName>check_exigible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check exigible</label>
    <type>Checkbox</type>
</CustomField>