unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/check_venta_anticipada__c.field-meta.xml
<CustomField>
    <fullName>check_venta_anticipada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check venta anticipada</label>
    <type>Checkbox</type>
</CustomField>