unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/check_viv_cobrada__c.field-meta.xml
<CustomField>
    <fullName>check_viv_cobrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check viv cobrada</label>
    <type>Checkbox</type>
</CustomField>