unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/cliente_id__c.field-meta.xml
<CustomField>
    <fullName>cliente_id__c</fullName>
    <label>cliente id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>