unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/colaborador_id__c.field-meta.xml
<CustomField>
    <fullName>colaborador_id__c</fullName>
    <label>colaborador id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>