unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compania</label>
    <length>255</length>
    <type>Text</type>
</CustomField>