unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/contrato_firmado__c.field-meta.xml
<CustomField>
    <fullName>contrato_firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contrato firmado</label>
    <type>Checkbox</type>
</CustomField>