unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/Dti__c.field-meta.xml
<CustomField>
    <fullName>Dti__c</fullName>
    <label>Dti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>