unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/Dtu__c.field-meta.xml
<CustomField>
    <fullName>Dtu__c</fullName>
    <label>Dtu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>