unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/estatus_ciclo__c.field-meta.xml
<CustomField>
    <fullName>estatus_ciclo__c</fullName>
    <label>estatus ciclo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>