unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/estatus_venta__c.field-meta.xml
<CustomField>
    <fullName>estatus_venta__c</fullName>
    <label>estatus venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>