unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_aviso_retencion__c.field-meta.xml
<CustomField>
    <fullName>fecha_aviso_retencion__c</fullName>
    <label>fecha aviso retencion</label>
    <type>Date</type>
</CustomField>