unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_biometrica_notaria__c.field-meta.xml
<CustomField>
    <fullName>fecha_biometrica_notaria__c</fullName>
    <label>fecha biometrica notaria</label>
    <type>Date</type>
</CustomField>