unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_cancelacion__c</fullName>
    <label>fecha cancelacion</label>
    <type>Date</type>
</CustomField>