unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_condiciones__c.field-meta.xml
<CustomField>
    <fullName>fecha_condiciones__c</fullName>
    <label>fecha condiciones</label>
    <type>Date</type>
</CustomField>