unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_contrato_firmado__c.field-meta.xml
<CustomField>
    <fullName>fecha_contrato_firmado__c</fullName>
    <label>fecha contrato firmado</label>
    <type>Date</type>
</CustomField>