unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_creacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_creacion__c</fullName>
    <label>fecha creacion</label>
    <type>Date</type>
</CustomField>