unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_entrega__c.field-meta.xml
<CustomField>
    <fullName>fecha_entrega__c</fullName>
    <label>fecha entrega</label>
    <type>Date</type>
</CustomField>