unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_envio__c.field-meta.xml
<CustomField>
    <fullName>fecha_envio__c</fullName>
    <label>fecha envio</label>
    <type>Date</type>
</CustomField>