unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_escrituracion__c.field-meta.xml
<CustomField>
    <fullName>fecha_escrituracion__c</fullName>
    <label>fecha escrituracion</label>
    <type>Date</type>
</CustomField>