unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_exigible__c.field-meta.xml
<CustomField>
    <fullName>fecha_exigible__c</fullName>
    <label>fecha exigible</label>
    <type>Date</type>
</CustomField>