unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_formalizacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_formalizacion__c</fullName>
    <label>fecha formalizacion</label>
    <type>Date</type>
</CustomField>