unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_modificacion_registro__c.field-meta.xml
<CustomField>
    <fullName>fecha_modificacion_registro__c</fullName>
    <label>fecha modificacion registro</label>
    <type>Date</type>
</CustomField>