unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_operacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_operacion__c</fullName>
    <label>fecha operacion</label>
    <type>Date</type>
</CustomField>