unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_prospeccion__c.field-meta.xml
<CustomField>
    <fullName>fecha_prospeccion__c</fullName>
    <label>fecha prospeccion</label>
    <type>Date</type>
</CustomField>