unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_reserva__c.field-meta.xml
<CustomField>
    <fullName>fecha_reserva__c</fullName>
    <label>fecha reserva</label>
    <type>Date</type>
</CustomField>