unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fecha_viv_cobrada__c.field-meta.xml
<CustomField>
    <fullName>fecha_viv_cobrada__c</fullName>
    <label>fecha viv cobrada</label>
    <type>Date</type>
</CustomField>