unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/fraccionamiento_id__c.field-meta.xml
<CustomField>
    <fullName>fraccionamiento_id__c</fullName>
    <label>fraccionamiento id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>