unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/id_estatus_venta__c.field-meta.xml
<CustomField>
    <fullName>id_estatus_venta__c</fullName>
    <label>id estatus venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>