unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/id_tipo_modificacion_registro__c.field-meta.xml
<CustomField>
    <fullName>id_tipo_modificacion_registro__c</fullName>
    <label>id tipo modificacion registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>