unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/lead_profiler_id__c.field-meta.xml
<CustomField>
    <fullName>lead_profiler_id__c</fullName>
    <label>lead profiler id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>