unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>