unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <label>Manzana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>