unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/metros_excedentes_r__c.field-meta.xml
<CustomField>
    <fullName>metros_excedentes_r__c</fullName>
    <label>metros excedentes r</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>