unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/monto_casa_muestra__c.field-meta.xml
<CustomField>
    <fullName>monto_casa_muestra__c</fullName>
    <label>monto casa muestra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>