unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/monto_paquetes__c.field-meta.xml
<CustomField>
    <fullName>monto_paquetes__c</fullName>
    <label>monto paquetes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>