unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/monto_promociones_venta_r__c.field-meta.xml
<CustomField>
    <fullName>monto_promociones_venta_r__c</fullName>
    <label>monto promociones venta r</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>