unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nc_bonificacion__c.field-meta.xml
<CustomField>
    <fullName>nc_bonificacion__c</fullName>
    <label>nc bonificacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>