unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nc_cancelacion_pg__c.field-meta.xml
<CustomField>
    <fullName>nc_cancelacion_pg__c</fullName>
    <label>nc cancelacion pg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>