unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nc_gasto_notarial_cd__c.field-meta.xml
<CustomField>
    <fullName>nc_gasto_notarial_cd__c</fullName>
    <label>nc gasto notarial cd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>