unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nc_gastos_operativos__c.field-meta.xml
<CustomField>
    <fullName>nc_gastos_operativos__c</fullName>
    <label>nc gastos operativos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>