unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nc_seguro_financiera__c.field-meta.xml
<CustomField>
    <fullName>nc_seguro_financiera__c</fullName>
    <label>nc seguro financiera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>