unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/no_emp_asesor_interno__c.field-meta.xml
<CustomField>
    <fullName>no_emp_asesor_interno__c</fullName>
    <label>no emp asesor interno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>