unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/no_emp_lead_prof__c.field-meta.xml
<CustomField>
    <fullName>no_emp_lead_prof__c</fullName>
    <label>no emp lead prof</label>
    <length>255</length>
    <type>Text</type>
</CustomField>