unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/no_emp_prospectador__c.field-meta.xml
<CustomField>
    <fullName>no_emp_prospectador__c</fullName>
    <label>no emp prospectador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>