unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/nombre_cliente__c.field-meta.xml
<CustomField>
    <fullName>nombre_cliente__c</fullName>
    <label>nombre cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>