unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/num_interior__c.field-meta.xml
<CustomField>
    <fullName>num_interior__c</fullName>
    <label>num interior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>