unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/numero_interno__c.field-meta.xml
<CustomField>
    <fullName>numero_interno__c</fullName>
    <label>numero interno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>