unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/opty_id__c.field-meta.xml
<CustomField>
    <fullName>opty_id__c</fullName>
    <label>opty id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>