unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagare_cancelacion_ncgn__c.field-meta.xml
<CustomField>
    <fullName>pagare_cancelacion_ncgn__c</fullName>
    <label>pagare cancelacion ncgn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>