unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagare_financiera__c.field-meta.xml
<CustomField>
    <fullName>pagare_financiera__c</fullName>
    <label>pagare financiera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>