unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagare_gasto_notarial_aval__c.field-meta.xml
<CustomField>
    <fullName>pagare_gasto_notarial_aval__c</fullName>
    <label>pagare gasto notarial aval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>