unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagare_reversa_bonificacion__c.field-meta.xml
<CustomField>
    <fullName>pagare_reversa_bonificacion__c</fullName>
    <label>pagare reversa bonificacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>