unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagare_seguro_finan_canc__c.field-meta.xml
<CustomField>
    <fullName>pagare_seguro_finan_canc__c</fullName>
    <label>pagare seguro finan canc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>