unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/pagos_realizados__c.field-meta.xml
<CustomField>
    <fullName>pagos_realizados__c</fullName>
    <label>pagos realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>