unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/parentezco_directo__c.field-meta.xml
<CustomField>
    <fullName>parentezco_directo__c</fullName>
    <label>parentezco directo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>