unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/plaza_id__c.field-meta.xml
<CustomField>
    <fullName>plaza_id__c</fullName>
    <label>plaza id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>