unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/precio_condiciones_especiales__c.field-meta.xml
<CustomField>
    <fullName>precio_condiciones_especiales__c</fullName>
    <label>precio condiciones especiales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>