unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/precio_lista_autorizado__c.field-meta.xml
<CustomField>
    <fullName>precio_lista_autorizado__c</fullName>
    <label>precio lista autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>