unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/precio_metros_excedentes__c.field-meta.xml
<CustomField>
    <fullName>precio_metros_excedentes__c</fullName>
    <label>precio metros excedentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>