unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/precio_unitario__c.field-meta.xml
<CustomField>
    <fullName>precio_unitario__c</fullName>
    <label>precio unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>