unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/proceso_gen_resolicitud__c.field-meta.xml
<CustomField>
    <fullName>proceso_gen_resolicitud__c</fullName>
    <label>proceso gen resolicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>