unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/producto_financiero_id__c.field-meta.xml
<CustomField>
    <fullName>producto_financiero_id__c</fullName>
    <label>producto financiero id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>