unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/prospectador_id__c.field-meta.xml
<CustomField>
    <fullName>prospectador_id__c</fullName>
    <label>prospectador id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>