unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/prototipo_id__c.field-meta.xml
<CustomField>
    <fullName>prototipo_id__c</fullName>
    <label>prototipo id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>