unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/rol_vta_asesor_interno_id__c.field-meta.xml
<CustomField>
    <fullName>rol_vta_asesor_interno_id__c</fullName>
    <label>rol vta asesor interno id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>