unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/rol_vta_prospectador_id__c.field-meta.xml
<CustomField>
    <fullName>rol_vta_prospectador_id__c</fullName>
    <label>rol vta prospectador id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>