unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/row_id_mc__c.field-meta.xml
<CustomField>
    <fullName>row_id_mc__c</fullName>
    <label>row id mc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>