unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/segmento_id__c.field-meta.xml
<CustomField>
    <fullName>segmento_id__c</fullName>
    <label>segmento id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>