unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/subcanal_id__c.field-meta.xml
<CustomField>
    <fullName>subcanal_id__c</fullName>
    <label>subcanal id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>