unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/subestatus__c.field-meta.xml
<CustomField>
    <fullName>subestatus__c</fullName>
    <label>subestatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>