unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/subtipo_movimiento__c.field-meta.xml
<CustomField>
    <fullName>subtipo_movimiento__c</fullName>
    <label>subtipo movimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>