unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/tipo_asesor__c.field-meta.xml
<CustomField>
    <fullName>tipo_asesor__c</fullName>
    <label>tipo asesor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>