unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/tipo_credito_id__c.field-meta.xml
<CustomField>
    <fullName>tipo_credito_id__c</fullName>
    <label>tipo credito id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>