unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/tipo_modificacion_registro__c.field-meta.xml
<CustomField>
    <fullName>tipo_modificacion_registro__c</fullName>
    <label>tipo modificacion registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>