unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/transaccion_id__c.field-meta.xml
<CustomField>
    <fullName>transaccion_id__c</fullName>
    <label>transaccion id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>