unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/usuario_ult_cambio__c.field-meta.xml
<CustomField>
    <fullName>usuario_ult_cambio__c</fullName>
    <label>usuario ult cambio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>