unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/valor_operacion__c.field-meta.xml
<CustomField>
    <fullName>valor_operacion__c</fullName>
    <label>valor operacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>