unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/fields/vivienda_id__c.field-meta.xml
<CustomField>
    <fullName>vivienda_id__c</fullName>
    <label>vivienda id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>