unpackaged/main/default/objects/BONOS_Y_COMISIONES__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>row_id__c</columns>
    <columns>row_id_mc__c</columns>
    <columns>opty_id__c</columns>
    <columns>transaccion_id__c</columns>
    <columns>avance_dtu__c</columns>
    <columns>bonif_mes_importe__c</columns>
    <columns>bonif_mes_porcentaje__c</columns>
    <columns>bonificacion_empleado__c</columns>
    <columns>bonificacion_pv__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>